# pypi_registration_test

./: .gitignore  LISENCE  Pipfile  README.md  setup.cfg  setup.py
.mypy_cache/3.7/: _ast.meta.json  _importlib_modulespec.meta.json  abc.meta.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.meta.json  io.data.json  io.meta.json  mmap.meta.json  posix.data.json  posix.meta.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json  typing_extensions.data.json  typing_extensions.meta.json
.mypy_cache/3.7/collections/: __init__.meta.json  abc.meta.json
.mypy_cache/3.7/importlib/: __init__.meta.json  abc.meta.json
.mypy_cache/3.7/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
.mypy_cache/3.7/pypi_registration_test/: __init__.data.json  __init__.meta.json
pypi_registration_test/: __init__.py  hello.py
pypi_registration_test.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pypi_registration_test/: __init__.py  bye.py  greet.py  hello.py
src/pypi_registration_test/human/: genger.py  person.py
