[metadata]
name = pypi_registration_test
version = attr: pypi_registration_test.__version__
url = https://github.com/w40141/pypi_registration_test
author = Daisuke Oku
author_email = w.40141@gmail.com
license = MIT License
license_file = LICENSE
description = Packaging sample project
long_description = file: README.md
long_description_content_type = text/markdown
keywords = one, two
classifiers =
	Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
install_requires =
	pandas

[options.packages.find]
where=src
